pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-092-setext_headings.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/092-setext_headings.md
---
[36m│[0m [3mFoo[0m

[32m════════════════════════════════════════════════════════════════════════════════[0m
